[AAE-6309] Fix for displaying main action on collapsed sidenav

--- a/src/app/components/create-menu/create-menu.component.scss
+++ b/src/app/components/create-menu/create-menu.component.scss
@@ -3,18 +3,6 @@
 }
 
 .app-create-menu {
-  width: 100%;
-
-  .mat-stroked-button:not(.app-create-menu-secondary-button) {
-    background-color: var(--theme-accent-color);
-    color: var(--theme-primary-color-default-contrast);
-    margin-top: 0px;
-
-    .mat-icon {
-      color: var(--theme-primary-color-default-contrast);
-    }
-  }
-
   .mat-stroked-button {
     width: 100%;
     height: 37.5px;
@@ -34,6 +22,16 @@
       height: 20px;
       text-align: left;
     }
+
+    &:not(.app-create-menu-secondary-button) {
+      background-color: var(--theme-accent-color);
+      color: var(--theme-primary-color-default-contrast);
+      margin-top: 0px;
+
+      .mat-icon {
+        color: var(--theme-primary-color-default-contrast);
+      }
+    }
   }
 
   &__root-menu {
@@ -48,46 +46,61 @@
     }
   }
 
+  // &--collapsed:not(.app-create-menu-secondary-button) {
+  //   .app-create-menu--icon {
+  //     color: var(--theme-accent-color);
+  //   }
+
+  //   &:hover {
+  //     color: var(--theme-accent-color);
+  //   }
+  // }
+
   &--collapsed {
     outline: none;
     color: var(--theme-secondary-text-color);
     cursor: pointer;
-    &:hover {
-      color: var(--theme-accent-color);
-    }
     margin: 0;
     border: none;
     background: none;
+
+    &:not(.app-create-menu-secondary-button) {
+      .app-create-menu--icon {
+        color: var(--theme-accent-color);
+      }
+
+      &:hover {
+        color: var(--theme-accent-color);
+      }
+    }
   }
 
   .app-create-menu--icon {
-    color: var(--theme-accent-color);
-  }
+    &__sub-menu {
+      .mat-menu-item {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        font-size: 14px;
+        color: var(--theme-secondary-text-color);
+        line-height: 48px;
+        box-shadow: none;
+        transform: none;
+        transition: unset;
+        font-weight: normal;
 
-  &__sub-menu {
-    .mat-menu-item {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      font-size: 14px;
-      color: var(--theme-secondary-text-color);
-      line-height: 48px;
-      box-shadow: none;
-      transform: none;
-      transition: unset;
-      font-weight: normal;
-
-      &:hover {
-        color: var(--theme-primary-color);
+        &:hover {
+          color: var(--theme-primary-color);
+        }
       }
-    }
 
-    .mat-menu-item[disabled],
-    .mat-menu-item[disabled]:hover {
-      color: var(--theme-text-disabled-color);
-
-      .mat-icon {
+      .mat-menu-item[disabled],
+      .mat-menu-item[disabled]:hover {
         color: var(--theme-text-disabled-color);
+
+        .mat-icon {
+          color: var(--theme-text-disabled-color);
+        }
       }
     }
   }
