--- a/src/app/components/main-action/main-action.component.scss
+++ b/src/app/components/main-action/main-action.component.scss
@@ -4,3 +4,7 @@
     background-color: var(--theme-accent-color);
     color: var(--theme-primary-color-default-contrast);
 }
+
+.main-action-menu-icon {
+    color: var(--theme-accent-color);
+}
